# copilot_saas_demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
conduit/: api.py  settings.py  urls.py  views.py
conduit/files/: orders.csv
conduit/templates/: index.html
