[tool.poetry]
name = "conduit copilot"
version = "0.1.0"
description = ""
authors = ["Dmitrii Sorokin <dmitrii@getconduit.app>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.6.3"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
